# discord_bot_example

./: .gitignore  README.md  discord_bot_example.py  pyproject.toml  requirements.txt
tests/: test_discord_bot_example.py
