[tool.poetry]
name = "discord_bot_example"
version = "0.1.0"
description = ""
authors = ["CryptoRalph <doxter@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
